[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest_pyvista"
authors = [{name = "The PyVista developers", email = "info@pyvista.org"}]
readme = "README.rst"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies=["pytest>=3.5.0"]
python_requires=">=3.8"

[project.urls]
Home = "https://github.com/pyvista/pytest-pyvista"


[project.optional-dependencies]
tests = [
    "codecov<2.2.0",
    "coverage==7.5.0",
    "pytest>=3.5.0",
    "pytest-cov==5.0.0",
    "numpy<1.27",
]
docs = [
    "pydata-sphinx-theme==0.15.2",
    "sphinx==7.3.7",
    "sphinx_copybutton==0.5.2",
    "sphinx-notfound-page==1.0.0",
]

[project.entry-points."pytest11"]
# Location of the plugin module, in this case ./pytest_pyvista/pytest_pyvista.py
pyvista = "pytest_pyvista.pytest_pyvista"

[tool.isort]
profile = 'black'
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true
skip_glob = 'pytest-pyvista/__init__.py'

[tool.mypy]
ignore_missing_imports = true
